/*
 * Copyright 2020 Accenture Global Solutions Limited
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package tracdap.api;

option java_package = "org.finos.tracdap.api";
option java_multiple_files = true;

import "tracdap/metadata/common.proto";
import "tracdap/metadata/object_id.proto";
import "tracdap/metadata/job.proto";
import "tracdap/metadata/tag_update.proto";

// Force dependency ordering - API protos depend on all of metadata
import "tracdap/metadata/tag.proto";

import "google/api/annotations.proto";


service TracOrchestratorApi {

  rpc validateJob (JobRequest) returns (JobStatus) {
    option (google.api.http) = {
      post: "/{tenant}/validate-job"
      body: "*"
    };
  }

  rpc submitJob (JobRequest) returns (JobStatus) {
    option (google.api.http) = {
      post: "/{tenant}/submit-job"
      body: "*"
    };
  }

  rpc checkJob (JobStatusRequest) returns (JobStatus) {
    option (google.api.http) = {
      post: "/{tenant}/check-job"
      body: "selector"
    };
  }

  rpc followJob (JobStatusRequest) returns (stream JobStatus);

  rpc cancelJob (JobStatusRequest) returns (JobStatus);
}


message JobRequest {

  string tenant = 1;

  metadata.JobDefinition job = 2;

  repeated metadata.TagUpdate jobAttrs = 3;
}


message JobStatusRequest {

  string tenant = 1;

  metadata.TagSelector selector = 2;
}


message JobStatus {

  metadata.TagHeader jobId = 1;

  metadata.JobStatusCode statusCode = 2;
  string statusMessage = 3;
}
